Testcases/pos/test11.jl
function main()
    a::Integer = +1 + 5
    b::Bool = true && false && true
end
main()
