Testcases/neg/test14.jl
# using variable before declaration / unknown variable
function main()
    x::Integer = 5 * dafuq
end

main()